@@ -3,12 +3,14 @@ from nose.tools import eq_
 
 from webhelpers.html import HTML, literal
 from webhelpers.html.converters import *
+from webhelpers.html.converters import _get_markdown_module
 
 def test_textilize():
     eq_('<h1>This is a test of textile</h1>\n\n<p>Paragraph</p>\n\n<p>Another paragraph</p>\n\n<ul>\n<li>Bullets</li>\n</ul>',
         textilize("h1. This is a test of textile\n\nParagraph\n\nAnother paragraph\n\n* Bullets"))
 
 def test_markdown():
+    _markdown = _get_markdown_module()
     markdown_text = """
 Introduction
 ------------
@@ -20,12 +22,20 @@ Acknowledgements <a id="acknowledgements" />
 
 [Michel Fortin][] has ported to Markdown to PHP.
     """
-    eq_(markdown(markdown_text), literal(u'<h2>Introduction</h2>\n<p>Markdown is a text-to-HTML conversion tool for web writers.\n</p>\n\n<h2>Acknowledgements <a id="acknowledgements" /></h2>\n<p>[Michel Fortin][] has ported to Markdown to PHP.\n</p>'))
+    if _markdown.version_info >= (2, 0):
+        expected =  literal(u'<h2>Introduction</h2>\n<p>Markdown is a text-to-HTML conversion tool for web writers.</p>\n<h2>Acknowledgements <a id="acknowledgements" /></h2>\n<p>[Michel Fortin][] has ported to Markdown to PHP.</p>')
+    else:
+        expected =  literal(u'<h2>Introduction</h2>\n<p>Markdown is a text-to-HTML conversion tool for web writers.\n</p>\n\n<h2>Acknowledgements <a id="acknowledgements" /></h2>\n<p>[Michel Fortin][] has ported to Markdown to PHP.\n</p>')
+    eq_(markdown(markdown_text, markdown=_markdown), expected)
 
 def test_markdown_embedded_html():
+    _markdown = _get_markdown_module()
     markdown_text = 'This text includes <script>Javascript</script> & stuff.'
-    expected = literal(u'<p>This text includes &lt;script&gt;Javascript&lt;/script&gt; &amp; stuff.\n</p>')
-    eq_(markdown(markdown_text, safe_mode="escape"), expected)
+    if _markdown.version_info >= (2, 0):
+        expected = literal(u'<p>This text includes &lt;script&gt;Javascript&lt;/script&gt; &amp; stuff.</p>')
+    else:
+        expected = literal(u'<p>This text includes &lt;script&gt;Javascript&lt;/script&gt; &amp; stuff.\n</p>')
+    eq_(markdown(markdown_text, safe_mode="escape", markdown=_markdown), expected)
 
 
 def test_nl2br():
